--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2>Defining the Museum</h2>
       </div>
    </a>
-   <a class="item item-3" href="bfh.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
+   <a class="item item-3" href="soon.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
       <div>
        <h2>Benjamin Franklin House</h2>
      </div>
@@ -306,7 +306,7 @@
             <h6 class="card-subtitle mb-2">Client Work</h6>
             <h5 class="card-title">Discovery Room Digital Re-vamp, Benjamin Franklin House</h5>
              <p class="card-text">Reedsigning and future-proofing the digital offer used in BFH's formal learning programme</p>
-             <a href="bfh.html" class="card-link">Project Details</a>
+             <a href="soon.html" class="card-link">Project Details</a>
            </div>
           </div>
         </div>
@@ -416,11 +416,11 @@
       <div class="card-body">
  		<div class="media">
           <div class="media-body">Working with the Education Department and volunteers at Benjamin Franklin House, I undertook a project to re-develop and re-vamp the video games used in the team's learning offer. Following a successful funding bid the team had updated their learning offer to include a number of colourful collages by illustrator Kremena Dimitrova which afforded an excellent opportunity to re-examine the games used as part of their Discovery Room education session and bring them into line with the new design scheme as well as fixing some old problems and enhancing their accessibility. 
-        	<a href="bfh.html">For more on the project click here</a>
+        	<a href="soon.html">For more on the project click here</a>
         	<br><br>
          #Digital #Learning #BenjaminFranklinHouse #Accessibility #Games
      	</div>
-        <a href="bfh.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt="Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left."></a>
+        <a href="soon.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt="Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left."></a>
       </div>
  	 </div>
     </div>
