Project aims inc, menu highlight disabled

--- a/PROJECTS TEMPLATE.html
+++ b/PROJECTS TEMPLATE.html
@@ -73,6 +73,30 @@
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>
         <h2>Project Brief</h2>
           </div>
+                   <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">
+          <h4 style="color: #6BD4D0">Project Type:</h4>
+         </div>
+         <div class="col-lg flex-column"> 
+          <p>Digital</p>
+         </div>
+       </div>
+         <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">  
+            <h4 style="color: #6BD4D0">Audience:</h4>
+         </div>
+         <div class="col-lg flex-column"> 
+            <p>KS2, Formal Education</p>
+         </div>
+       </div>
+         <div class="row justify-content-end" style="margin-left: 0; margin-bottom: 20px">
+          <div class="flex-column"> 
+            <h4 style="color: #6BD4D0">Aims:</h4>
+          </div>
+          <div class="col-lg flex-column">  
+          <p>Graphical & function update of exisiting concept, improve accessibility, future-proofing.<br></p>
+          </div>
+         </div> 
             <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/Picture 1.jpg" alt=""></div>
           </div>
           <p>Project project project</p>
