--- a/bfh.html
+++ b/bfh.html
@@ -76,6 +76,30 @@
           </div>
             <!--<div class="col-sm-3"><img class="img-fluid mx-auto  float-right" src="img/Screenshot_BFH.png" alt=""></div>-->
           </div>
+         <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">
+         	<h4 style="color: #6BD4D0">Project Type:</h4>
+         </div>
+         <div class="col-lg flex-column">	
+         	<p>Digital</p>
+         </div>
+     	 </div>
+         <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">	
+         		<h4 style="color: #6BD4D0">Audience:</h4>
+         </div>
+         <div class="col-lg flex-column">	
+         		<p>KS2, Formal Education</p>
+         </div>
+     	 </div>
+         <div class="row justify-content-end" style="margin-left: 0; margin-bottom: 20px">
+         	<div class="flex-column">	
+         		<h4 style="color: #6BD4D0">Aims:</h4>
+         	</div>
+         	<div class="col-lg flex-column">	
+         	<p>Graphical & function update of exisiting concept, improve accessibility, future-proofing.<br></p>
+         	</div>
+         </div>  
          <div class="row justify-content-end">
          <div class="col-lg flex-column">
           <p>This was somewhat of a passion project for me; I'd been volunteering with Benjamin Franklin House for about a year before I came up with a project proposal for the Education team to redesign their digital Discovery Room offer - a series of quizzes and games based on a few objects from their handling collection. They'd just finished an HLF project which had added some amazing images designed by <a href="https://www.kremenadimitrova.com/">Kremena Dimitrova</a> to their schools offer, and it seemed like an excellent time to suggest bringing their digital offer in line with the new look. (Plus after a year facilitating the digital handling side I felt pretty confident in saying their previous program was acting as dated as it was beginning to look!)
@@ -214,7 +238,7 @@
         <div class="row justify-content-end">
         <div class="col-lg flex-column">
         <p>
-        	Awaiting feedback - delayed due to lock-down. 
+        	Awaiting feedback - delayed due to pandemic (not a sentence I ever expected to write...).  
 		</p>
       	</div>
 
