--- a/scary.html
+++ b/scary.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jennifer Clare Paton</title>
+    <title>JCPaton Learning</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Jennifer Paton</span>
+        <span class="d-block d-lg-none">JCPaton Learning</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/niff_logo_icon_192.png" alt="">
         </span>
@@ -65,16 +65,45 @@
         <div class="mt-5">
           <div class="row justify-content-end">
           <div class="col-lg">
-         <h1 class="mb-5">ScaryMushroom, Mystery Box</h1>
-          <a class="btn btn-light js-scroll-trigger disabled" href="#Brief" role="button">Brief</a>
+         <h1 class="mb-5">ScaryMushroom, Middlesbrough Mystery Box</h1>
+          <a class="btn btn-light js-scroll-trigger" href="#Brief" role="button">Brief</a>
           <a class="btn btn-light js-scroll-trigger" href="#Diary" role="button">Project Diary</a>
           <a class="btn btn-light js-scroll-trigger" href="#Research" role="button">Project Documentation</a>
           <a class="btn btn-light js-scroll-trigger" href="#Budget" role="button">Budget</a>
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>
         <h2>Project Brief</h2>
           </div>
-            <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/scary.png" alt=""></div>
+        </div>
+
+        <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">
+          <h4 style="color: #6BD4D0">Project Type:</h4>
+         </div>
+         <div class="col-lg flex-column"> 
+          <p>Experimental</p>
+         </div>
+        </div>
+         <div class="row justify-content-end" style="margin-left: 0">
+         <div class="flex-column">  
+            <h4 style="color: #6BD4D0">Audience:</h4>
+         </div>
+         <div class="col-lg flex-column"> 
+            <p><a href="that thing about aud segs">Culture Vulture</a></p>
+         </div>
+       </div>
+         <div class="row justify-content-end" style="margin-left: 0; margin-bottom: 20px">
+          <div class="flex-column"> 
+            <h4 style="color: #6BD4D0">Aims:</h4>
           </div>
+          <div class="col-lg flex-column">  
+          <p>Engage an audience with local cultural heritage.<br></p>
+          </div>
+         </div>
+
+
+            
+         <div class="row justify-content-end">
+         <div class="col-lg flex-column">
           <p>As escape room obssessed, mystery loving, puzzle fans ScaryMushroom and myself have much in common, and so when she returned from a jaunt around the world to her base in middlesborough just as I was toying with concept of using a puzzle box as an interactive exhibition space it seemed like an ideal partnership. As such this project has started with a somewhat diffferent brief: 
           	<ul>
           		<li>"Exhibit" Middleborough, showcasing its history, cultural sites and highlighting all the interesting things in Scary's backyard.</li>
@@ -89,7 +118,8 @@
           	</ul> 
           Oh, and of course it all has to fit into a small enough to be shipped from the Post Office. 
           </p>
-        </div>
+      </div>        
+      <div class="col-sm-3"><img class="img-fluid mx-auto  float-right" src="img/scary_proj.png" alt=""></div>
       </section>
 
 
@@ -100,7 +130,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Diary">
         <div class="mt-5">
           <a class="btn btn-light js-scroll-trigger" href="#Brief" role="button">Brief</a>
-          <a class="btn btn-light js-scroll-trigger disabled" href="#Diary" role="button">Project Diary</a>
+          <a class="btn btn-light js-scroll-trigger" href="#Diary" role="button">Project Diary</a>
           <a class="btn btn-light js-scroll-trigger" href="#Research" role="button">Project Documentation</a>
           <a class="btn btn-light js-scroll-trigger" href="#Budget" role="button">Budget</a>
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>       
@@ -134,7 +164,7 @@
         <div class="mt-5">
           <a class="btn btn-light js-scroll-trigger" href="#Brief" role="button">Brief</a>
           <a class="btn btn-light js-scroll-trigger" href="#Diary" role="button">Project Diary</a>
-          <a class="btn btn-light js-scroll-trigger disabled" href="#Research" role="button">Project Documentation</a>
+          <a class="btn btn-light js-scroll-trigger" href="#Research" role="button">Project Documentation</a>
           <a class="btn btn-light js-scroll-trigger" href="#Budget" role="button">Budget</a>
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>   
         <h2>Project Documentation</h2>
@@ -166,7 +196,7 @@
           <a class="btn btn-light js-scroll-trigger" href="#Brief" role="button">Brief</a>
           <a class="btn btn-light js-scroll-trigger" href="#Diary" role="button">Project Diary</a>
           <a class="btn btn-light js-scroll-trigger" href="#Research" role="button">Project Documentation</a>
-          <a class="btn btn-light js-scroll-trigger disabled" href="#Budget" role="button">Budget</a>
+          <a class="btn btn-light js-scroll-trigger" href="#Budget" role="button">Budget</a>
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>        
         <h2>Budget</h2>
 
@@ -186,7 +216,7 @@
           <a class="btn btn-light js-scroll-trigger" href="#Diary" role="button">Project Diary</a>
           <a class="btn btn-light js-scroll-trigger" href="#Research" role="button">Project Documentation</a>
           <a class="btn btn-light js-scroll-trigger" href="#Budget" role="button">Budget</a>
-          <a class="btn btn-light js-scroll-trigger disabled" href="#Outcomes" role="button">Outcomes</a>        
+          <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>        
         <h2>Outcomes</h2>
 
           
