--- a/bfh.html
+++ b/bfh.html
@@ -102,10 +102,13 @@
          </div>  
          <div class="row justify-content-end">
          <div class="col-lg flex-column">
-          <p>This was somewhat of a passion project for me; I'd been volunteering with Benjamin Franklin House for about a year before I came up with a project proposal for the Education team to redesign their digital Discovery Room offer - a series of quizzes and games based on a few objects from their handling collection. They'd just finished an HLF project which had added some amazing images designed by <a href="https://www.kremenadimitrova.com/">Kremena Dimitrova</a> to their schools offer, and it seemed like an excellent time to suggest bringing their digital offer in line with the new look. (Plus after a year facilitating the digital handling side I felt pretty confident in saying their previous program was acting as dated as it was beginning to look!)
+          <p>This was somewhat of a passion project for me as I was an Education Volunteer with <a href="https://benjaminfranklinhouse.org/">Benjamin Franklin House</a> for about a year before I submitted my proposal, inspired by my experience. As part of our Discovery Room education sessions, we used software which gave a series of quizzes and games based on a selection of handling objects; they were good fun and a great learning experience for the students but it was starting to show its age and we'd had found the odd glitch and frustrating design problem cropping up here and there. Handily the House had just finished part of an HLF project which had added some amazing images designed by <a href="https://www.kremenadimitrova.com/">Kremena Dimitrova</a> to their wider education offer, so it seemed like an excellent time to suggest fixing up a few of those bugs and bringing their digital offer in line with the new look! 
           <br>
           <br>
-          My proposal was to bring the look of their software in line with Kremena's images, enhance accessibility, and address a few issues we as end-users had noted with the existing software. As always things were never that simple! But working closely with the BFH team and the Education volunteers I think we managed to achieve our goals.
+          I worked with a few different members of staff and my fellow volunteers at BFH to come up with a project brief that covered a few areas we'd like to see addressed: bring the look of their software in line with Kremena's images, enhance accessibility & learning outcomes, address those issues we as end-users had noted with the existing software and, possibly look at some hardware issues (boy did we underestimate the last one!). 
+          <br>
+          <br>
+          As always things were never quite that simple! But by working closely (remotely) with Eleanor Hamblen the Education Manager at BFH and the Education volunteers I think we managed to achieve those goals. 
           </p>
       	</div>
           <div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/BFH_Original.png" alt=""><i>Out with the old...</i></div>
