--- a/index.html
+++ b/index.html
@@ -276,7 +276,27 @@
         <div class="my-auto">
           <h2 class="mb-3">Portfolio</h2>
           <p class="mb-5">A selection of my best work, essays and projects.</p> 
-          
+<div
+ class="canva-embed"
+ data-design-id="DAEEU-s1MS0"
+ data-height-ratio="1.0000"
+ style="padding:100.0000% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"
+></div>
+<script async src="https:&#x2F;&#x2F;sdk.canva.com&#x2F;v1&#x2F;embed.js"></script>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEEU-s1MS0&#x2F;view?utm_content=DAEEU-s1MS0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Vampire the Masqurade</a> by JCPatonLearning
+
+<div
+ class="canva-embed"
+ data-design-id="DAED-IJMR8Q"
+ data-height-ratio="1.4143"
+ style="padding:141.4286% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"
+></div>
+<script async src="https:&#x2F;&#x2F;sdk.canva.com&#x2F;v1&#x2F;embed.js"></script>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAED-IJMR8Q&#x2F;view?utm_content=DAED-IJMR8Q&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Portfolio</a> by JCPatonLearning
+
+
+
+
       <div class="row mb-5">
         <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
