--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h1 class="mb-0">JCPaton
           	<span class="text-primary">Learning</span></h1>
           	<div class="h3"><span style="color:#6BD4D0">MUSEUMS</span> · <span style="color:#628fA1">HERITAGE</span> · <span style="color:#58456E">LIBRARIES</span> </div>
-            <div class="subheading mb-5"><a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
+            <div class="subheading mb-5"><a href="mailto:jenni@jcpatonlearning.co.uk">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
           </div>
           <div><p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p></div>
 
@@ -99,7 +99,7 @@
       </div>
     </a>
 
-   <a class="item item-2" href="MRart.html" alt="Writing Project. Defining the Museum. Image: A typewriter, with a sheet of handwritten text next to it on a desk. Photo by Dominika Roseclay from Pexels">
+   <a class="item item-2" href="https://le.ac.uk/~/media/uol/docs/academic-departments/museum-studies/museological-review/mr-issues-24.pdf?la=en" alt="Writing Project. Defining the Museum. Image: A typewriter, with a sheet of handwritten text next to it on a desk. Photo by Dominika Roseclay from Pexels">
       <div>
         <h2>Defining the Museum</h2>
       </div>
@@ -315,7 +315,7 @@
             <h6 class="card-subtitle mb-2">Publication</h6>
             <h5 class="card-title">Museological Review, Defining the Museum</h5>
              <p class="card-text">Awaiting publication. A response to ICOM's redefinition of the museum.</p>
-             <a href="" class="card-link">Coming Soon</a>
+             <a href="https://le.ac.uk/~/media/uol/docs/academic-departments/museum-studies/museological-review/mr-issues-24.pdf?la=en" class="card-link">Read here</a>
            </div>
           </div>
         </div>
