Resources & portfolio update

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="resources.html">Resouces</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Blog</a>
           </li>
         </ul>
@@ -277,86 +280,90 @@
           <h2 class="mb-3">Portfolio</h2>
           <p class="mb-5">A selection of my best work, essays and projects.</p> 
 
-        <div class="row mb-5">
-			<div class="canva-embed" data-design-id="DAED-IJMR8Q" data-height-ratio="1.4143" style="padding:141.4286% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"></div>
+     	<div class="row mb-5"> 
+        	<div class="col-3">
+        		<div class="row mb-5">
+					<div class="canva-embed" data-design-id="DAED-IJMR8Q" data-height-ratio="1.4143" style="background: black none repeat scroll 0% 0%; border-radius: 8px; position: relative; box-shadow: rgba(63, 69, 81, 0.16) 0px 2px 8px 0px; overflow: hidden; will-change: transform; margin-bottom: 0.9em; padding: 0px; "></div>
 			<script async src="https:&#x2F;&#x2F;sdk.canva.com&#x2F;v1&#x2F;embed.js"></script>
-		</div>
+				</div>
+			</div>
+			
+			<div class="col-sm" style="margin-top: 1.6em;">
+      			<div class="row mb-5">
+        			<div class="col-sm-4">
+         	 		 <div class="card" style="width: 16rem;">
+          			  <div class="card-body">
+           	 			 <h6 class="card-subtitle mb-2">Project</h6>
+           				 <h5 class="card-title">Middlesbrough Mystery Box</h5>
+            			 <p class="card-text">An experiment with artist <a href="https://scarymushroom.wordpress.com/">Scary Mushroom </a> investigating using haptics and exploration to engage adult learners.</p>
+            			 <a href="scary.html" class="card-link">Project Details</a>
+           			  </div>
+         	 		 </div>
+       				</div>
 
+       				<div class="col-sm-4">
+         			 <div class="card" style="width: 16rem;">
+         			  <div class="card-body">
+          			    <h6 class="card-subtitle mb-2">Publication</h6>
+           			    <h5 class="card-title">Museological Review, Defining the Museum</h5>
+           				<p class="card-text">Awaiting publication. A response to ICOM's redefinition of the museum.</p>
+             			<a href="https://le.ac.uk/~/media/uol/docs/academic-departments/museum-studies/museological-review/mr-issues-24.pdf?la=en" class="card-link">Read here</a>
+          			  </div>
+         			 </div>
+       				</div>
 
-      <div class="row mb-5">
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Project</h6>
-            <h5 class="card-title">Middlesbrough Mystery Box</h5>
-             <p class="card-text">An experiment with artist <a href="https://scarymushroom.wordpress.com/">Scary Mushroom </a> investigating using haptics and exploration to engage adult learners.</p>
-             <a href="scary.html" class="card-link">Project Details</a>
-           </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Publication</h6>
-            <h5 class="card-title">Museological Review, Defining the Museum</h5>
-             <p class="card-text">Awaiting publication. A response to ICOM's redefinition of the museum.</p>
-             <a href="https://le.ac.uk/~/media/uol/docs/academic-departments/museum-studies/museological-review/mr-issues-24.pdf?la=en" class="card-link">Read here</a>
-           </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Client Work</h6>
-            <h5 class="card-title">Discovery Room Digital Re-vamp, Benjamin Franklin House</h5>
-             <p class="card-text">Reedsigning and future-proofing the digital offer used in BFH's formal learning programme</p>
-             <a href="soon.html" class="card-link">Project Details</a>
-           </div>
-          </div>
-        </div>
-       </div>
+        			<div class="col-sm-4">
+          			 <div class="card" style="width: 16rem;">
+          			  <div class="card-body">
+           				 <h6 class="card-subtitle mb-2">Client Work</h6>
+           				 <h5 class="card-title">Discovery Room Digital Re-vamp, Benjamin Franklin House</h5>
+            			 <p class="card-text">Reedsigning and future-proofing the digital offer used in BFH's formal learning programme</p>
+           				 <a href="soon.html" class="card-link">Project Details</a>
+           			  </div>
+        		     </div>
+      				</div>
+       			</div>
     
+       			<div class="row mb-5">
+       			 	<div class="col-sm-4">
+         			 <div class="card" style="width: 16rem;">
+          			  <div class="card-body">
+           				<h6 class="card-subtitle mb-2">Essay</h6>
+           				<h5 class="card-title">In museums today, can digital collections be treated the same as material collections?</h5>
+            			<p class="card-text">An exploration of digital collection.</p>
+             			<a href="img/Collecting_Today_Digital_Collections_JPaton.pdf" class="card-link">Read the Essay</a>
+          			  </div>
+         			 </div>
+       				</div>
+
+       				<div class="col-sm-4">
+          			 <div class="card" style="width: 16rem;">
+           			  <div class="card-body">
+           				<h6 class="card-subtitle mb-2">Thesis Project</h6>
+           				<h5 class="card-title">Roundheads at the Tower</h5>
+            			<p class="card-text">Little is popularly known about the role of the Tower of London in the English Civil Wars, this series of audioguides will take you on a walk through the Tower's Roundhead past.</p>
+             			<a href="http://roundheadsatthetower.co.uk" class="card-link">Website</a>
+             			<a href="roundheads.html" class="card-link">Project Details</a>
+           			  </div>
+          			 </div>
+       				</div>
+
+       				<div class="col-sm-4">
+         			 <div class="card" style="width: 16rem;">
+           			  <div class="card-body">
+            			<h6 class="card-subtitle mb-2">Group Project</h6>
+            			<h5 class="card-title">Expanding City Interpretation Plan</h5>
+            			<p class="card-text">A group project from my degree re-interpreting the Museum of London's Expanding City Gallery, to increase accessibility.</p>
+             			<a href="expandingcity.html" class="card-link">Project Details</a>
+          			  </div>
+          			 </div>
+        			</div>
+       			</div>
+       		</div>
+       	</div>
        <div class="row mb-5">
         <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Essay</h6>
-            <h5 class="card-title">In museums today, can digital collections be treated the same as material collections?</h5>
-             <p class="card-text">An exploration of digital collection.</p>
-             <a href="img/Collecting_Today_Digital_Collections_JPaton.pdf" class="card-link">Read the Essay</a>
-           </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Thesis Project</h6>
-            <h5 class="card-title">Roundheads at the Tower</h5>
-             <p class="card-text">Little is popularly known about the role of the Tower of London in the English Civil Wars, this series of audioguides will take you on a walk through the Tower's Roundhead past.</p>
-             <a href="http://roundheadsatthetower.co.uk" class="card-link">Website</a>
-             <a href="roundheads.html" class="card-link">Project Details</a>
-           </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-           <div class="card-body">
-            <h6 class="card-subtitle mb-2">Group Project</h6>
-            <h5 class="card-title">Expanding City Interpretation Plan</h5>
-             <p class="card-text">A group project from my degree re-interpreting the Museum of London's Expanding City Gallery, to increase accessibility.</p>
-             <a href="expandingcity.html" class="card-link">Project Details</a>
-           </div>
-          </div>
-        </div>
-       </div>
-
-       <div class="row mb-5">
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 16rem;">
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Event</h6>
             <h5 class="card-title">Libraries Week - Mystery</h5>
@@ -367,7 +374,7 @@
         </div>
 
          <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 16rem;">
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Scheme</h6>
             <h5 class="card-title">LOVE BoOKS</h5>
@@ -378,6 +385,7 @@
         </div>
 
       </div> <!--row div-->
+</div>
 
         </div>
       </section>
