--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="resources.html">Resouces</a>
+            <a class="nav-link" href="resources.html">Resources</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Blog</a>
