--- a/resources.html
+++ b/resources.html
@@ -77,7 +77,7 @@
         <h2>Doing Digital On a Budget</h2>
         <p>
           <a href="res/Doing Digital - Resources Sheet.pdf">Doing Digital - Resources Sheet</a><br>
-          <a href="res/Doing Digital - Slides.pdf">Doing Digital - Slides</a><br>
+          <a href="res/Doing_Digital_-_Slides.pdf">Doing Digital - Slides</a><br>
           <a href="res/Doing Digital - Transcript.pdf">Doing Digital - Transcript</a>
 
           </div>
