--- a/resources.html
+++ b/resources.html
@@ -76,9 +76,9 @@
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>-->
         <h2>Doing Digital On a Budget</h2>
         <p>
-          <a href="res/Doing Digital - Resources Sheet.pdf">Doing Digital - Resources Sheet</a><br>
+          <!--<a href="res/Doing Digital - Resources Sheet.pdf">Doing Digital - Resources Sheet</a><br>
           <a href="res/Doing_Digital_-_Slides.pdf">Doing Digital - Slides</a><br>
-          <a href="res/Doing Digital - Transcript.pdf">Doing Digital - Transcript</a>
+          <a href="res/Doing Digital - Transcript.pdf">Doing Digital - Transcript</a>-->
 
           </div>
                    <!--<div class="row justify-content-end" style="margin-left: 0">
