--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <p class="mb-5">A selection of my best work, essays and projects.</p> 
 
      	<div class="row mb-5"> 
-        	<div class="col-3">
+        	<div class="col-sm-3">
         		<div class="row mb-5">
 					<div class="canva-embed" data-design-id="DAED-IJMR8Q" data-height-ratio="1.4143" style="background: black none repeat scroll 0% 0%; border-radius: 8px; position: relative; box-shadow: rgba(63, 69, 81, 0.16) 0px 2px 8px 0px; overflow: hidden; will-change: transform; margin-bottom: 0.9em; padding: 0px; "></div>
 			<script async src="https:&#x2F;&#x2F;sdk.canva.com&#x2F;v1&#x2F;embed.js"></script>
