--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="container-fluid p-0">
 <div class="alert alert-secondary alert-dismissible fade show" role="alert">
-  <strong>This site uses cookies.</strong> We only use cookies to analyse traffic to the site, by click x or continuing to use this site you consent to the use of cookies unless you have disabled them in your browser.  
+  <strong>This site uses cookies.</strong> We only use cookies to analyse traffic to the site, by clicking x or continuing to use this site you consent to the use of cookies unless you have disabled them in your browser.  
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -107,7 +107,7 @@
         <h2>Defining the Museum</h2>
       </div>
    </a>
-   <a class="item item-3" href="soon.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
+   <a class="item item-3" href="bfh.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
       <div>
        <h2>Benjamin Franklin House</h2>
      </div>
@@ -318,7 +318,7 @@
            				 <h6 class="card-subtitle mb-2">Client Work</h6>
            				 <h5 class="card-title">Discovery Room Digital Re-vamp, Benjamin Franklin House</h5>
             			 <p class="card-text">Reedsigning and future-proofing the digital offer used in BFH's formal learning programme</p>
-           				 <a href="soon.html" class="card-link">Project Details</a>
+           				 <a href="bfh.html" class="card-link">Project Details</a>
            			  </div>
         		     </div>
       				</div>
@@ -434,7 +434,7 @@
         	<br><br>
          #Digital #Learning #BenjaminFranklinHouse #Accessibility #Games
      	</div>
-        <a href="soon.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt="Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left."></a>
+        <a href="bfh.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt="Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left."></a>
       </div>
  	 </div>
     </div>
