--- a/bfh.html
+++ b/bfh.html
@@ -130,7 +130,7 @@
           As always things are never quite that simple! But by working closely (remotely) with Eleanor, Education Manager at BFH and the Education volunteers we managed to achieve those goals. 
           </p>
       	</div>
-          <div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/BFH_Original.png" alt=""><i>Out with the old...</i></div>
+          <div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/BFH_original.png" alt=""><i>Out with the old...</i></div>
         </div>
         <div class="row justify-content-end">
         <div class="col-lg flex-column">
@@ -193,7 +193,7 @@
             <div class="col-lg flex-column">  
               <br>
               <br>
-        
+
         <blockquote><p style="color: #5D6369;">Jenni has done a wonderful job of upgrading of our Discovery Room games which are a vital component of primary school visits to Benjamin Franklin House. Visually, the games are much more colourful and the graphics have been simplified. Functionality has also been improved which allows for students to engage with the games more independently. Throughout the development process, Jenni was a pleasure to work with and always responsive to feedback. She showed a real attention to detail and we are delighted with the final product. I would highly recommend Jenni to museums, heritage sites or libraries who are looking to develop engaging digital content.</p><cite>~ Márcia Balisciano, Benjamin Franklin House</cite>
         </blockquote>
 
