Update front page

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
 
  <div class="container float-left" style="padding-left: 0px">
   <div class="gallery-wrap">
-    <a class="item1 item-1" href="scary.html" alt="Experimental Project. Middlesbrough Mystery Box. Image: A red plush hexagonal box with a cast metal lock plate and a matching wooden lid on a green centimeter marked cutting board, to the right is a brass key">
+     <a class="item1 item-1" href="Raspberry Pi Project.html" alt="Project Tutorial. Headless Raspberry Pi Interactive. Image: An open cased Raspberry Pi computer on an oranger background">
+    <div>
+      <h2>Building a Raspberry Pi Interactive</h2>
+    </div>
+    </a>
+    <a class="item item-2" href="scary.html" alt="Experimental Project. Middlesbrough Mystery Box. Image: A red plush hexagonal box with a cast metal lock plate and a matching wooden lid on a green centimeter marked cutting board, to the right is a brass key">
       <div>
         <h2>Middlesbrough Mystery Box</h2>
       </div>
     </a>
 
-   <a class="item item-2" href="https://le.ac.uk/~/media/uol/docs/academic-departments/museum-studies/museological-review/mr-issues-24.pdf?la=en" alt="Writing Project. Defining the Museum. Image: A typewriter, with a sheet of handwritten text next to it on a desk. Photo by Dominika Roseclay from Pexels">
-      <div>
-        <h2>Defining the Museum</h2>
-      </div>
-   </a>
    <a class="item item-3" href="bfh.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
       <div>
        <h2>Benjamin Franklin House</h2>
